--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,15 @@
 <body>
     <header class="container">
     <img class="rounded-circle" width="150" height="150" src="./img/images.jpeg" alt="">
-    <p class="lead">Eu sou a professora_</p>
-    <h1>Eu ensino programação</h1>
+    <p class="lead">Somos o grupo 5_</p>
+    <h1>Estamos aprendendo programação</h1>
     <p>Esse documento tem como finalidade amostrar as atividades 
         e projetos realizados na displina de Progrmação</p>
     <div>
-        <p class="btn btn-success">HTML</p>
-        <p>CSS</p>
-        <p>JAVA</p>
-        <p>Programação</p>
+        <button type="button" class="botoes btn btn-success">HTML</button>
+        <button type="button" class="botoes btn btn-success">CSS</button>
+        <button type="button" class="botoes btn btn-success">JAVA</button>
+        <button type="button" class="botoes btn btn-success">Programação</button>
     </div>
 </header>
 </body>
