--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site bizarro</title>
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,5 +22,23 @@
         <button type="button" class="botoes btn btn-success">Programação</button>
     </div>
 </header>
+ 
+
+<main class"container-2">
+ <h2>Meus Projetos</h2>
+ <div class="row">
+    <div class="col-md-4">
+       <div class="card" style="width: 18em;">
+          <img class="card-img-top" src="./gencler tt de aktifim konusmak isteyenler profilde var hesap adi pintte aktif olamiyorum.jpeg">
+         <div class="card-body">
+            <h5 class="card-title">primeiro projeto</h5>
+        </div>
+       </div>
+
+  
+    </div>
+</div>
+
+</main>
 </body>
 </html>
