--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site bizarro</title>
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="container">
     <img class="rounded-circle" width="150" height="150" src="./img/images.jpeg" alt="">
-    <p class="lead">Somos o grupo 5_</p>
+    <p class="lead">Somos o grupo 5</p>
     <h1>Estamos aprendendo programação</h1>
     <p>Esse documento tem como finalidade amostrar as atividades 
         e projetos realizados na displina de Progrmação</p>
     <div>
-        <button type="button" class="botoes btn btn-success">HTML</button>
+        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffiction-battlefield.fandom.com%2Fpt-br%2Fwiki%2FRichard_Watterson&psig=AOvVaw2Yc6yNuUdzyd2I_lyFuOTG&ust=1743677886085000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCJj9n7uYuYwDFQAAAAAdAAAAABAE"><button type="button" class="botoes btn btn-success">HTML</button></a>
         <button type="button" class="botoes btn btn-success">CSS</button>
         <button type="button" class="botoes btn btn-success">JAVA</button>
         <button type="button" class="botoes btn btn-success">Programação</button>
@@ -28,7 +28,7 @@
  <h2>Meus Projetos</h2>
  <div class="row">
     <div class="col-md-4">
-       <div class="card" style="width: 18em;">
+       <div class="card" style="width: 18 rem;">
           <img class="card-img-top" src="./gencler tt de aktifim konusmak isteyenler profilde var hesap adi pintte aktif olamiyorum.jpeg">
          <div class="card-body">
             <h5 class="card-title">primeiro projeto</h5>
