--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site bizarro</title>
+    <title>Site medonho</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="container">
     <img class="rounded-circle" width="150" height="150" src="./img/images.jpeg" alt="">
-    <p class="lead">Somos o grupo 5</p>
+    <p class="lead">Somos o grupo 5 o melhor grupo</p>
     <h1>Estamos aprendendo programação</h1>
     <p>Esse documento tem como finalidade amostrar as atividades 
         e projetos realizados na displina de Progrmação</p>
@@ -20,6 +20,7 @@
         <button type="button" class="botoes btn btn-success">CSS</button>
         <button type="button" class="botoes btn btn-success">JAVA</button>
         <button type="button" class="botoes btn btn-success">Programação</button>
+        <a href="https://www.youtube.com/watch?v=mCh6VpxLubc"><button type="button" class="botoes btn btn-success">botão assustador</button></a>
     </div>
 </header>
  
@@ -29,10 +30,21 @@
  <div class="row">
     <div class="col-md-4">
        <div class="card" style="width: 18 rem;">
+        <h5 class="card-title">primeiro projeto</h5>
           <img class="card-img-top" src="./gencler tt de aktifim konusmak isteyenler profilde var hesap adi pintte aktif olamiyorum.jpeg">
          <div class="card-body">
-            <h5 class="card-title">primeiro projeto</h5>
         </div>
+       </div>
+    </div>
+       <div class="row">
+        <div class="col-md-4">
+            <div class="card" style="width: 19rem;">
+            <h5 class="card-title">segundo projeto</h5>
+            <img src="https://cdn-images.dzcdn.net/images/cover/8e3b6174793c9952500f50ad52cc9fb1/0x1900-000000-80-0-0.jpg">
+            <div class="card-body">
+            </div>
+        
+       </div>
        </div>
 
   
