--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button type="button" class="botoes btn btn-success">CSS</button>
         <button type="button" class="botoes btn btn-success">JAVA</button>
         <button type="button" class="botoes btn btn-success">Programação</button>
-        <a href="https://www.youtube.com/watch?v=mCh6VpxLubc"><button type="button" class="botoes btn btn-success">botão assustador</button></a>
+        <a href="https://www.youtube.com/watch?v=mCh6VpxLubc"><button type="button" class="botoes btn btn-success"target="_blank">botão assustador</button></a>
     </div>
 </header>
  
@@ -43,10 +43,17 @@
             <img src="https://cdn-images.dzcdn.net/images/cover/8e3b6174793c9952500f50ad52cc9fb1/0x1900-000000-80-0-0.jpg">
             <div class="card-body">
             </div>
-        
+            <div class="row">
+                <div class="col-md-4">
+            <div class="card" style="width: 19rem;">
+                <h5 class="card-title">terceiro projeto</h5>
+                <img src="./ca1744335b0afb8b094b986ac8f15135.jpg">
+                <div class="card-body">
+            </div>
+        </div>
        </div>
        </div>
-
+       </div>
   
     </div>
 </div>
